--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -99,31 +99,32 @@ components:
     name: button_4
     layout_properties: {grid_position: 'MYNPEQ,MZAXQK', full_width_row: false}
   - type: TextArea
-    properties: {role: null, align: left, height: 247, tooltip: '', placeholder: output will be displayed here,
-      border: '', enabled: false, foreground: '', visible: true, text: '', font_size: null,
-      auto_expand: false, font: '', spacing_above: small, spacing_below: small, italic: false,
-      background: '', bold: true, underline: false}
+    properties: {role: null, align: left, height: 247, tooltip: View your output .json here,
+      placeholder: output will be displayed here, border: '', enabled: false, foreground: '',
+      visible: true, text: '', font_size: null, auto_expand: false, font: '', spacing_above: small,
+      spacing_below: small, italic: false, background: '', bold: true, underline: false}
     name: outputData
     layout_properties: {grid_position: 'ETMSGL,JPKZON'}
   - type: TextArea
-    properties: {role: null, align: left, height: 246, tooltip: '', placeholder: logs are displayed here,
-      border: '', enabled: false, foreground: 'theme:On Primary', visible: true, text: '',
-      font_size: null, auto_expand: false, font: '', spacing_above: small, spacing_below: small,
-      italic: false, background: 'theme:On Tertiary Container', bold: true, underline: false}
+    properties: {role: null, align: left, height: 246, tooltip: discarded / newly added keys,
+      placeholder: logs are displayed here, border: '', enabled: false, foreground: 'theme:On
+        Primary', visible: true, text: '', font_size: null, auto_expand: false, font: '',
+      spacing_above: small, spacing_below: small, italic: false, background: 'theme:On
+        Tertiary Container', bold: true, underline: false}
     name: logs
     layout_properties: {grid_position: 'ETMSGL,JAMGWB'}
   - type: TextBox
-    properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: output file name,
-      border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
-      font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
-      background: '', bold: false, underline: false}
+    properties: {role: null, align: left, hide_text: false, tooltip: enter your output file name here,
+      placeholder: output file name, border: '', enabled: true, foreground: '', visible: true,
+      text: '', font_size: null, font: '', spacing_above: small, type: text, spacing_below: small,
+      italic: false, background: '', bold: false, underline: false}
     name: outputFileName
     layout_properties: {grid_position: 'XDFUET,OTLDSD', full_width_row: false}
   - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: .json, font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
+    properties: {role: null, align: left, tooltip: enter your output file name here,
+      border: '', foreground: '', visible: true, text: .json, font_size: null, font: '',
+      spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+      background: '', bold: false, underline: false, icon: ''}
     name: label_2
     layout_properties: {grid_position: 'XDFUET,ZYQXLZ', full_width_row: false}
   - type: Button
