--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -5,8 +5,7 @@ unique_ids:
     Form2: '1694180627845197393593847.2935'
     Form4: '1694267060065130735473898.92592'
   modules: {}
-  server_modules:
-    ServerModule1: '1694267903684836494018966.2047'
+  server_modules: {}
   assets:
     standard-page.html: B7PW6CIRF52E475G2JMQYE4724ZCJ6SI
     theme.css: XX4JF237R7YPIE2JHO3PZZ5DPXXAY4XF
