--- a/client_code/Form4/form_template.yaml
+++ b/client_code/Form4/form_template.yaml
@@ -38,7 +38,7 @@ components:
     name: button_1
   - type: Label
     properties: {role: null, align: left, tooltip: Received/translated .json, border: '',
-      foreground: '', visible: true, text: Current Language Code, font_size: null,
+      foreground: '', visible: true, text: Source Language Code (current), font_size: null,
       font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
       background: '', bold: false, underline: false, icon: ''}
     layout_properties: {grid_position: 'JXPCAZ,OZJGEG', full_width_row: false}
@@ -58,15 +58,15 @@ components:
     name: oldData
     layout_properties: {grid_position: 'BGMSAG,PRBHPI'}
   - type: TextBox
-    properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: Enter current language code,
+    properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: Enter source language code,
       border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
       font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
       background: '', bold: false, underline: false}
-    name: currentLanguage
+    name: sourceLanguage
     layout_properties: {grid_position: 'BGMSAG,AILNOF FZMIKF,GIKZNT'}
   - type: Label
     properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: Translation Language Code, font_size: null, font: '', spacing_above: small,
+      visible: true, text: Target Language Code, font_size: null, font: '', spacing_above: small,
       icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
       underline: false, icon: ''}
     name: label_4
@@ -83,7 +83,7 @@ components:
       border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
       font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
       background: '', bold: false, underline: false}
-    name: translationLanguage
+    name: targetLanguage
     layout_properties: {grid_position: 'BGMSAG,AILNOF IHQOIJ,GABKXP'}
   - type: Button
     properties: {role: filled, align: center, tooltip: '', border: '', enabled: true,
