--- a/client_code/Form4/form_template.yaml
+++ b/client_code/Form4/form_template.yaml
@@ -88,6 +88,15 @@ components:
       underline: false}
     name: targetLanguage
     layout_properties: {grid_position: 'BGMSAG,AILNOF IHQOIJ,GABKXP'}
+  - type: Link
+    properties: {role: null, url: 'https://rapidapi.com/dickyagustin/api/text-translator2/details',
+      align: left, tooltip: '', border: '', foreground: '', visible: true, text: 'Note:
+        Click here to view the list of supported languages along with their language
+        codes', font_size: null, wrap_on: mobile, font: '', col_spacing: medium, spacing_above: medium,
+      icon_align: left, col_widths: '', spacing_below: small, italic: false, background: '',
+      bold: false, underline: true, icon: ''}
+    name: link_1
+    layout_properties: {grid_position: 'EUVLPR,WCLZJW'}
   - type: Button
     properties: {role: filled, align: center, tooltip: '', border: '', enabled: true,
       foreground: '', visible: true, text: SUBMIT, font_size: null, font: '', spacing_above: medium,
