--- a/client_code/Form4/form_template.yaml
+++ b/client_code/Form4/form_template.yaml
@@ -10,7 +10,7 @@ components:
   components:
   - type: Button
     properties: {role: null, align: right, tooltip: '', border: '', enabled: true,
-      foreground: 'theme:On Primary', visible: true, text: SWITCH TO FILE MODE, font_size: 12,
+      foreground: 'theme:On Primary', visible: true, text: SWITCH TO FILE MODE, font_size: 14,
       font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
       background: 'theme:Primary', bold: false, underline: false, icon: ''}
     name: button_6
@@ -52,7 +52,7 @@ components:
     name: button_2
     layout_properties: {grid_position: 'JXPCAZ,CBHQBJ', full_width_row: false}
   - type: TextArea
-    properties: {role: null, align: left, height: 121, tooltip: '', placeholder: Enter .json here,
+    properties: {role: null, align: left, height: 193, tooltip: '', placeholder: Enter .json here,
       border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
       auto_expand: false, font: '', spacing_above: small, spacing_below: small, italic: false,
       background: '', bold: false, underline: false}
@@ -92,11 +92,11 @@ components:
     properties: {role: null, url: 'https://rapidapi.com/dickyagustin/api/text-translator2/details',
       align: left, tooltip: '', border: '', foreground: '', visible: true, text: 'Note:
         Click here to view the list of supported languages along with their language
-        codes', font_size: null, wrap_on: mobile, font: '', col_spacing: medium, spacing_above: medium,
+        codes', font_size: null, wrap_on: mobile, font: '', col_spacing: medium, spacing_above: large,
       icon_align: left, col_widths: '', spacing_below: small, italic: false, background: '',
       bold: false, underline: true, icon: ''}
     name: link_1
-    layout_properties: {grid_position: 'EUVLPR,WCLZJW'}
+    layout_properties: {grid_position: 'BGMSAG,AILNOF EXDAGP,ZKLOSP'}
   - type: Button
     properties: {role: filled, align: center, tooltip: '', border: '', enabled: true,
       foreground: '', visible: true, text: SUBMIT, font_size: null, font: '', spacing_above: medium,
