--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -16,9 +16,10 @@ components:
     layout_properties: {grid_position: 'LWKEST,MCVIPL'}
   - type: Button
     properties: {role: null, align: right, tooltip: '', border: '', enabled: true,
-      foreground: 'theme:On Primary', visible: true, text: LIVE TRANSLATE, font_size: 14,
-      font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-      background: 'theme:Primary', bold: false, underline: false, icon: ''}
+      foreground: 'theme:On Primary', visible: true, text: SWITCH TO LIVE TRANSLATE,
+      font_size: 14, font: '', spacing_above: small, icon_align: left, spacing_below: small,
+      italic: false, background: 'theme:On Primary Container', bold: false, underline: false,
+      icon: ''}
     name: button_5
     layout_properties: {grid_position: 'LWKEST,EOWJNK'}
     event_bindings: {click: goToForm4}
