--- a/client_code/Form4/form_template.yaml
+++ b/client_code/Form4/form_template.yaml
@@ -12,7 +12,7 @@ components:
     properties: {role: null, align: right, tooltip: '', border: '', enabled: true,
       foreground: 'theme:On Primary', visible: true, text: SWITCH TO FILE MODE, font_size: 14,
       font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-      background: 'theme:Primary', bold: false, underline: false, icon: ''}
+      background: 'theme:On Primary Container', bold: false, underline: false, icon: ''}
     name: button_6
     layout_properties: {grid_position: 'JDOZRG,MGZQNL', full_width_row: false}
     event_bindings: {click: goToForm1}
