--- a/client_code/Form2/form_template.yaml
+++ b/client_code/Form2/form_template.yaml
@@ -65,11 +65,19 @@ components:
   - type: TextBox
     properties: {}
     name: old_dir
-    layout_properties: {grid_position: 'LCIDOQ,TTBLZR'}
+    layout_properties: {grid_position: 'LCIDOQ,TTBLZR GSLJZG,NUACEX'}
+  - type: FileLoader
+    properties: {}
+    name: file_loader_1
+    layout_properties: {grid_position: 'LCIDOQ,TTBLZR QCHSHL,LGBLYB'}
   - type: TextBox
     properties: {}
     name: text_box_2
-    layout_properties: {grid_position: 'LCIDOQ,OMKIPR'}
+    layout_properties: {grid_position: 'LCIDOQ,OMKIPR LJXVNF,APYNEK'}
+  - type: FileLoader
+    properties: {}
+    name: file_loader_2
+    layout_properties: {grid_position: 'LCIDOQ,OMKIPR XOAOYP,FNYFDV'}
   - type: Label
     properties: {role: null, align: left, tooltip: View your output .json here, border: '',
       foreground: '', visible: true, text: Output, font_size: null, font: '', spacing_above: small,
