--- a/client_code/Form2/form_template.yaml
+++ b/client_code/Form2/form_template.yaml
@@ -82,7 +82,7 @@ components:
       align: center
       tooltip: ''
       border: ''
-      file_types: .json
+      file_types: '.json, '
       enabled: true
       files: []
       foreground: ''
